new/theme/2020/static/scss/base.scss
/* ... */
.bannerbt { background-color: $button-red; }
.bt-pd { padding: .625rem 2.5rem; }
.bt-trans { transition: all .3s ease;}
.menu-txt-trans { transition: color .2s; }
.ptdemo { padding-top: 6rem; }
.rep-bd { border: .063rem solid $fluid-light-gray; }
.rep-shadow { box-shadow: -.188rem -.125rem .3rem $fluid-light-gray; }
.wr-bdr { border-bottom-right-radius: .938rem; }
.wr-bdl { border-top-left-radius: .938rem; }
.wr-sz { height: 5.625rem; width: 5.625rem; }
.accordion-item h4:not(:active) ~ .accordion-content { display: none; }
.ch-w { max-width: 95ch; }
.anchor-pos { top: -50vh; }
.bl-hidden { border-left-style: hidden; }
.ba-hidden { border-style: hidden; }
.tooltip { &:hover { .tooltip-text { visibility: visible; } } }
.anchor-sign { &::before { content: '\0023'; } }
.banner-bg { background-image: url('../../images/cover-main.png'); }
.asap-bg { background-image: url('../../images/background-asap.png'); height: 25rem; }
.continuous-bg { background-image: url('../../images/use-cases/continuous/main-continuous-hacking.png'); }
.one-shot-bg { background-image: url('../../images/use-cases/one-shot/main-one-shot.png'); }
.products-bg { background-image: url('../../images/products/products-cover.png'); }
.integrates-bg { background-image: url('../../images/products/integrates/integrates-cover.png'); }
.drills-bg { background-image: url('../../images/products/drills/drills-cover.png'); }
.forces-bg { background-image: url('../../images/products/forces/forces-cover.png'); }
.thank-you-bg { background-image: url('../../images/contact-us/bg-thank-you-page.png'); }
.careers-main-bg { background-image: url('../../images/careers/hero-main-1.png'); }
.error-bg { background-image: url('../../images/bg-error.png');}
.b-max { font-weight: 999; }
.nb-6 { margin-bottom: -6rem;}
.lower-img { &:hover { transform: scale(1.1);
    transition: transform .25s ease-in-out; } }
.scale-all { &:hover { transform: scale(1.1);
    transition: transform .25s ease-in-out;} }
.pointer {cursor: pointer; }
.z-100 { z-index: 100; }
.menu-txt { &:hover {color: $fluid-black; }
  &:focus { color: $fluid-black; } }
.menu-trans { transform: translateY(-25%) rotateX(35deg);
  transition: transform .5s, opacity .5s; }
.t-50 { top: 50%; }
.ty-50 { transform: translateY(-50%); }
.mt-menu { margin-top: 1.25rem; }
.f-small { font-size: .8rem; }
.w2-5 { width: 2.25rem; }
.f-footer { font-size: 1.65rem; }
.lh-2 { line-height: 2; }
.lh2 { line-height: 2rem; }
.fw-max { font-weight: 999; }
.line-menu { display: none; }
.w-image { width: 37em; }
.fadein { animation: fadein .5s; }
.mt-menu-bt { margin-top: .1rem; }
.item-carousel { width: 24rem; }
.h-small { height: .5rem; }
.h-cont-bar { height: .6rem; }
.h-bar { height: .5rem; }
.mirror-img { transform: scaleX(-1); }
.feature-button-l { &:hover { transform: translateX(-1rem);
  transition: all ease-in-out .5s; } }
.feature-button-r { &:hover { transform: translateX(1rem);
  transition: all ease-in-out .5s; } }
.download-btn { &:hover { transform: translateY(.6em);
  transition: all ease .3s; } }
.f-sub { font-size: 1.9rem; }
.right-small { right: .6rem; }
.nbs {margin-bottom: -.15rem; }
.banner-height { height: 350px; }
.lh3 { line-height: 3rem; }
.w-small {width: .5rem; }
.hv-svg-red { &:hover { fill: $button-hover; } }
.mb-products { margin-bottom: 6.25rem; }
.f-benefits { font-size: 2.375rem; }
.f-benefits-p { font-size: 1.875rem; }
.f-key-features { font-size: 1.125rem; }
.lh-key-features { line-height: 2.25rem; }
.bb-form { border-bottom: 1px solid $lightblack; }
.h-slide-bt { height: .188rem; }
.slide-bt-trans { transition: background-color 0.6s ease; }
.ph-bt { padding-left: 4.25rem; padding-right: 4.25rem; }
.pv-bt { padding-top: .75rem; padding-bottom: .75rem; }
.h-maxcontent { height: max-content; }
.mw-banner { max-width: 56.25rem; }
.shadowbox-blog { box-shadow: 0px 10px 10px $grayshadow;}
.hover-card { &:hover {
  box-shadow: 0px 20px 20px $darkshadow; } }
.mh-100 { max-height: 100%; }
.ph-10 {padding-right: 10%; padding-left: 10%; }
.w-search-icon { width: 1rem; }
.minw-menu { min-width: 14rem; }
.f-error { font-size: 10rem; }
.mw-14 { max-width: 14rem; }
.display-none { display: none; }

// Tachyons custom responsive classes
@media screen and (min-width: 960px) and (max-width: 1200px) {
  .w-footer-links { width: auto; }
  .w-footer-phrase { width: 50% ; }
  .d-ml { display: block; }
  .mh-ml { margin-left: auto; margin-right: auto; }
  .text-center-ml { text-align: center; }
}

@media screen and (min-width: 1200px) {
  .w-footer-links { width: 60%; }
  .w-footer-phrase { width: 40%; }
  .df-l { display: flex; }
  .text-right-l { text-align: right; }
  .ml0-footer { margin-left: 0; }
  .db-xl { display: block; }
}

// Small screens
@media screen and (max-width: 30em) {
  .contact-pd { padding: .75rem 7.65rem; }
  .footer-bt{ padding: .75rem 5.6rem; }
  .mr-3-s { margin-right: 3rem; }
  .f-small-s { font-size: .6rem; }
  .f4-s { font-size: 1.5rem; }
  .h40-s { height: 40rem; }
  .h-menu-s { height: 6rem; }
  .w-logo { width: 10rem; }
  .pv-4-m { padding-bottom: 1.6rem; padding-top: 1.6rem; }
  .w90-s { width: 90%; }
  .fheader-s { font-size: 4.5rem; }
  .cover-s { background-size: cover; }
  .shadow-menu { box-shadow: 0 8px 6px -6px $shadowblack; }
  .w-100-s { width: 100%; }
  .asap-bg-s { background-image: url('../../images/bg-asap-mobile.png'); height: 25rem; }
  .nt-menu { margin-top: -.125rem; }
  .tracked-1 { letter-spacing: .06rem; }
  .w-products { width: 20rem; }
  .f-title-s { font-size: 2rem; }
  .banner-height { height: 12.5rem; }
  .h-search-icon { height: 1.125rem; }
}
/* ... */

